--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,42 +28,32 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.3.1
+  cloud_firestore: ^4.15.10
+  country_state_city_picker: ^1.2.8
+  cupertino_icons: ^1.0.6
+  firebase_auth: ^4.18.0
+  firebase_core: ^2.27.2
+  firebase_storage: ^11.6.11
+  firebase_ui_auth: ^1.14.0
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  flutter_svg: ^2.0.10+1
-  firebase_core: ^2.27.2
-  cloud_firestore: ^4.15.10
-  firebase_auth: ^4.18.0
-  firebase_storage: ^11.6.11
-  image_picker: ^1.0.7
-  cached_network_image: ^3.3.1
-  shimmer_animation: ^2.1.0+1
-  country_state_city_picker: ^1.2.8  
   flutter_easyloading: ^3.0.5
-  firebase_ui_auth: ^1.14.0
+  flutter_svg: ^2.0.10+1
+  image_picker: ^1.0.7
+  photo_view: ^0.15.0
   provider: ^6.1.2
+  shimmer_animation: ^2.1.0+1
   uuid: ^4.4.0
- 
-  
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  photo_view: ^0.15.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -78,10 +68,8 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -95,8 +83,5 @@ flutter:
     - family: Semi-Bold
       fonts:
         - asset: assets/fonts/GemunuLibre-SemiBold.ttf
-
-          
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
