--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
   firebase_core: ^2.27.2
   firebase_storage: ^11.6.11
   firebase_ui_auth: ^1.14.0
+  
   flutter:
     sdk: flutter
   flutter_easyloading: ^3.0.5
+  flutter_slidable: ^3.1.0
   flutter_svg: ^2.0.10+1
   image_picker: ^1.0.7
   photo_view: ^0.15.0
@@ -47,10 +49,9 @@ dependencies:
   uuid: ^4.4.0
 
 dev_dependencies:
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  photo_view: ^0.15.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -85,3 +86,5 @@ flutter:
         - asset: assets/fonts/GemunuLibre-SemiBold.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+ 
